Edited individuals index

--- a/app/views/industries/index.html.erb
+++ b/app/views/industries/index.html.erb
@@ -31,7 +31,7 @@
       <tfoot>
         <tr>
           <td colspan="4"><em>*Millions of dollars</em>
-                          <em><br>Note: Other is a catchall term in Crunchbase data</em>
+                          <em><br>Note: Other is a catchall category in Crunchbase data</em>
           </td>
         </tr>
       </tfoot>
