--- a/app/views/individuals/index.html.erb
+++ b/app/views/individuals/index.html.erb
@@ -4,34 +4,51 @@
 <section class="container group under">
 <h5>Need to Fix underlying logic behind this</h5>
   <div class="grid_12">
-    <table class= "sortable">
-      <caption>Top Angel Investors</caption>
+    <table class="table table-hover sortable">
+      <caption>LTM Funding</caption>
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Rank</th>
-          <th>Investments<span class="footnote">*</span></th>
+          <th>Quarter</th>
+          <th>Amount*</th>
           <th>Volume</th>
+          <th>Avg. Investment</th>
         </tr>
       </thead>
-      <% i = 0 %>
-      <% Individual.limit(10).each do |individual| %>
-      <% i += 1 %>
       <tbody>
         <tr>
-          <td><%= link_to individual.name, individual %></td>
-          <td><%= i %></td>
-          <td class="currency"><%= format_mil(Funding.multiple_funding_codes('seed', 'angel').for_individual(individual.id).sum(:funding_amount)) %></td>
-          <td><%= Funding.multiple_funding_codes('seed', 'angel').for_individual(individual.id).count %></td>
+          <td>Q2 2013</td>
+          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q2').multiple_funding_codes('angel', 'seed').sum('funding_amount')) %></td>
+          <td> <%= Funding.quarterly_fundings(Time.now().year, 'q2').multiple_funding_codes('angel', 'seed').count %></td>
+          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q2').multiple_funding_codes('angel', 'seed').average('funding_amount')) %></td>
         </tr>
-      <% end %>
+        <tr>
+          <td>Q1 2013</td>
+          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q1').multiple_funding_codes('angel', 'seed').sum('funding_amount')) %></td>
+          <td> <%= Funding.quarterly_fundings(Time.now().year, 'q1').multiple_funding_codes('angel', 'seed').count %></td>
+          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q1').multiple_funding_codes('angel', 'seed').average('funding_amount')) %></td>
+        </tr>
+        <tr>
+          <td>Q4 2012</td>
+          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q4').multiple_funding_codes('angel', 'seed').sum('funding_amount')) %></td>
+          <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q4').multiple_funding_codes('angel', 'seed').count %></td>
+          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q4').multiple_funding_codes('angel', 'seed').average('funding_amount')) %></td>
+        </tr>
+        <tr>
+          <td>Q3 2012</td>
+          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').multiple_funding_codes('angel', 'seed').sum('funding_amount')) %></td>
+          <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q3').multiple_funding_codes('angel', 'seed').count %></td>
+          <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').multiple_funding_codes('angel', 'seed').average('funding_amount')) %></td>
+        </tr>
       </tbody>
       <tfoot>
         <tr>
-          <td colspan="4">*Total in millions</td>
+          <td colspan="4">*Last 12 Months</td>
         </tr>
       </tfoot>
     </table>
+
+
+
     <h5>Need to make it so we are displaying the top from the database, not the guys who have id 1-10</h5>
     <h5>Footnote: Angel Investor is defined as funding in seed or angel rounds</h5>
   </div>
