--- a/app/views/individuals/index.html.erb
+++ b/app/views/individuals/index.html.erb
@@ -2,10 +2,9 @@
   <h3 class= "container">Angel Investing</h1>
 </div>
 <section class="container group under">
-<h5>Need to Fix underlying logic behind this</h5>
   <div class="grid_12">
     <table class="table table-hover sortable">
-      <caption>LTM Funding</caption>
+      <caption>LTM Angel Funding</caption>
       <thead>
         <tr>
           <th>Quarter</th>
@@ -39,33 +38,32 @@
           <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q3').multiple_funding_codes('angel', 'seed').count %></td>
           <td class="currency"> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').multiple_funding_codes('angel', 'seed').average('funding_amount')) %></td>
         </tr>
+        <tfoot>
+          <tr>
+            <td colspan="4"><em>*Millions of dollars</em>
+            </td>
+          </tr>
+        </tfoot>
       </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="4">*Last 12 Months</td>
-        </tr>
-      </tfoot>
     </table>
-
-
-
-    <h5>Need to make it so we are displaying the top from the database, not the guys who have id 1-10</h5>
-    <h5>Footnote: Angel Investor is defined as funding in seed or angel rounds</h5>
   </div>
+
   <div class="grid_12">
-    <h3 class="center">Angel Investing by Industry</h3>
+    <br>
+    <h3 class="center">LTM Angel Funding by Industry</h3>
     <%= render 'individuals_donut' %>
   </div>
 </section>
 <section class="container group">
   <div class="grid_12">
     <table class= "sortable">
-      <caption>Angel Investing by Location</caption>
+      <caption>LTM Angel Funding by Location</caption>
       <thead>
         <tr>
           <th>City</th>
           <th>Investments</th>
           <th>Volume</th>
+          <th>Avg. Investment</th>
         </tr>
       </thead>
       <tbody>
@@ -73,61 +71,72 @@
           <td> San Francisco</td>
           <td class="currency"><%= format_mil(Funding.for_city('San Francisco').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
           <td><%= Funding.for_city('San Francisco').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('San Francisco').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
         </tr>
         <tr>
           <td>New York</td>
           <td class="currency"><%= format_mil(Funding.for_city('New York').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
           <td><%= Funding.for_city('New York').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('New York').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
         </tr>
         <tr>
           <td>Boston</td>
           <td class="currency"><%= format_mil(Funding.for_city('Boston').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
           <td><%= Funding.for_city('Boston').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('Boston').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
         </tr>
         <tr>
           <td>Chicago</td>
           <td class="currency"><%= format_mil(Funding.for_city('Chicago').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
           <td><%= Funding.for_city('Chicago').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
-        </tr>
-        <tr>
-          <td>Boulder</td>
-          <td class="currency"><%= format_mil(Funding.for_city('Boulder').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
-          <td><%= Funding.for_city('Boulder').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('Chicago').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
         </tr>
         <tr>
           <td>Austin</td>
           <td class="currency"><%= format_mil(Funding.for_city('Austin').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
           <td><%= Funding.for_city('Austin').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('Austin').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
+        </tr>
+        <tr>
+          <td>Boulder</td>
+          <td class="currency"><%= format_mil(Funding.for_city('Boulder').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
+          <td><%= Funding.for_city('Boulder').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('Boulder').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
         </tr>
         <tr>
           <td>Los Angeles</td>
           <td class="currency"><%= format_mil(Funding.for_city('Los Angeles').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
           <td><%= Funding.for_city('Los Angeles').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
-        </tr>
-        <tr>
-          <td>Berkley</td>
-          <td class="currency"><%= format_mil(Funding.for_city('Berkley').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
-          <td><%= Funding.for_city('Berkley').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
-        </tr>
-        <tr>
-          <td>Houston</td>
-          <td class="currency"><%= format_mil(Funding.for_city('Houston').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
-          <td><%= Funding.for_city('Houston').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('Los Angeles').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
         </tr>
         <tr>
           <td>Atlanta</td>
           <td class="currency"><%= format_mil(Funding.for_city('Atlanta').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
           <td><%= Funding.for_city('Atlanta').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('Atlanta').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
         </tr>
+        <tr>
+          <td>Las Vegas</td>
+          <td class="currency"><%= format_mil(Funding.for_city('Las Vegas').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
+          <td><%= Funding.for_city('Las Vegas').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('Las Vegas').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
+        </tr>
+        <tr>
+          <td>Houston</td>
+          <td class="currency"><%= format_mil(Funding.for_city('Houston').multiple_funding_codes('seed', 'angel').ltm_fundings(365).sum(:funding_amount)) %></td>
+          <td><%= Funding.for_city('Houston').multiple_funding_codes('seed', 'angel').ltm_fundings(365).count %></td>
+          <td><%= format_mil(Funding.for_city('Houston').multiple_funding_codes('seed', 'angel').ltm_fundings(365).average(:funding_amount)) %></td>
+        </tr>
+
       </tbody>
       <tfoot>
         <tr>
-          <td colspan="3">*Total in millions</td>
+          <td colspan="4"><em>*Millions of dollars</em>
+            <br><em>Note: San Francisco includes Silicon Valley and the Bay Area</em>
+          </td>
         </tr>
       </tfoot>
     </table>
-      <h5>Note: San Francisco includes Menlo Park, Mountain View and Silicon Valley</h5>
-      <h5>Note: Angel Investing is defined as seed or angel rounds by crunchbase</h5>
   </div>
   <div class="grid_12">
     <h3 class="center">Monthly Angel Investing</h3>
