--- a/app/views/locations/_location_bar.html.erb
+++ b/app/views/locations/_location_bar.html.erb
@@ -9,10 +9,10 @@
 <% end  %>
 
 <% dates.each do |d| %>
-  <% data_array << { a: fundings.monthly_fundings(d).sum(:funding_amount), y: d.strftime()} %>
+  <% data_array << { a: (Funding.monthly_fundings(d).sum(:funding_amount) / 1000000).round(0), y: d.strftime()} %>
 <% end %>
 
-<% j_data_array = data_array.to_json %>
+<% j_data_array = data_array.reverse.to_json %>
 
 <div id="funding-bar", class="right"></div>
 <div class="clearfix"></div>
@@ -22,9 +22,15 @@ Morris.Bar({
   element: 'funding-bar',
   data:
       <%= raw(j_data_array) %>,
+      axes: false,
+      grid: false,
   xkey: 'y',
   ykeys: ['a'],
   labels: ['Funding'],
-  barColors: ['#377D3C', '#228B22', '#32CD32']
+  barColors: ['#377D3C', '#228B22', '#32CD32'],
+  hoverCallback: function (index, options, content) {
+        var row = options.data[index];
+        return row.y + ":" + " $" + row.a.toFixed(0) + "*"
+      }
 });
 </script>
