--- a/app/views/industries/_industry_bar.html.erb
+++ b/app/views/industries/_industry_bar.html.erb
@@ -12,7 +12,7 @@
   <% data_array << { a: (Funding.monthly_fundings(d).for_industry(97).sum(:funding_amount)/1000000).round(0), y: d.strftime("%b%y")} %>
 <% end %>
 
-<% j_data_array = data_array.to_json %>
+<% j_data_array = data_array.reverse.to_json %>
 
 <div id="funding-bar", class="right"></div>
 <div class="clearfix"></div>
