--- a/app/views/industries/index.html.erb
+++ b/app/views/industries/index.html.erb
@@ -60,121 +60,123 @@
 
   <div class="grid_12">
 
-  <h3 id='industry-header'>LTM Industry Funding by Round<h3>
     <%= select_tag :industry_id, options_from_collection_for_select(Industry.all, :id, :name) %>
-  <table id="industry-table"></table>
+      <h3 id='industry-header'>LTM Funding by Industry<h3>
+      <table id="industry-table"></table>
 
-<% @industries.each do |industry| %>
-  <h3 id="industry-header-<%= industry.name %>" style="display: none">LTM<span class="footnote">*</span> Funding by Round - <%= industry.name %></h3>
-   <table class="table table-hover sortable" id="industry-table-<%= industry.name %>" style="display: none">
-      <thead>
-        <tr>
-          <th>Series</th>
-          <th>Amount<span class="footnote">**</span></th>
-          <th>Volume</th>
-          <th>Avg. Round Investment</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Seed</td>
-          <td class="currency"> <%=  format_mil(Funding.multiple_funding_codes('seed', 'angel').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.multiple_funding_codes('seed', 'angel').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.multiple_funding_codes('seed', 'angel').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Series A</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('a').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('a').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('a').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Series B</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('b').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('b').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('b').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Series C</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('c').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('c').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('c').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Series D</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('d').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('d').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('d').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Series E</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('e').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('e').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('e').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Series F</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('f').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('f').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('f').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Series G</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('g').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('g').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('g').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Venture Round</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('venture_round').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('venture_round').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('venture_round').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Private Equity</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('private_equity').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('private_equity').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('private_equity').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-        <tr>
-          <td>Debt Round</td>
-          <td class="currency"> <%=  format_mil(Funding.for_funding_round('debt_round').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
-          <td> <%=  Funding.for_funding_round('debt_round').for_industry(industry.id).ltm_fundings(365).count %></td>
-          <td> <%=  format_mil(Funding.for_funding_round('debt_round').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="4"><em>*Dollars in millions</em></td>
-        </tr>
-      </tfoot>
-    </table>
-  <% end %>
+    <% @industries.each do |industry| %>
+      <h3 id="industry-header-<%= industry.name %>" style="display: none">LTM<span class="footnote">*</span> Funding by Round - <%= industry.name %></h3>
+       <table class="table table-hover sortable" id="industry-table-<%= industry.name %>" style="display: none">
+          <thead>
+            <tr>
+              <th>Series</th>
+              <th>Amount<span class="footnote">**</span></th>
+              <th>Volume</th>
+              <th>Avg. Round Investment</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Seed</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('seed').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('seed').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('seed').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Angel</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('angel').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('angel').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('angel').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Series A</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('a').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('a').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('a').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Series B</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('b').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('b').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('b').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Series C</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('c').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('c').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('c').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Series D</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('d').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('d').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('d').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Series E</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('e').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('e').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('e').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Series F</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('f').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('f').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('f').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Series G</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('g').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('g').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('g').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Venture Round</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('venture_round').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('venture_round').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('venture_round').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Private Equity</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('private_equity').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('private_equity').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('private_equity').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+            <tr>
+              <td>Debt Round</td>
+              <td class="currency"> <%=  format_mil(Funding.for_funding_round('debt_round').for_industry(industry.id).ltm_fundings(365).sum('funding_amount') ) %></td>
+              <td> <%=  Funding.for_funding_round('debt_round').for_industry(industry.id).ltm_fundings(365).count %></td>
+              <td> <%=  format_mil(Funding.for_funding_round('debt_round').for_industry(industry.id).ltm_fundings(365).average('funding_amount') ) %></td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="4">*Last 12 Months **In millions</td>
+            </tr>
+          </tfoot>
+        </table>
+      <% end %>
 </div>
+
+
+
 
 
 
   <div class="grid_12">
     <h3 class="center">LTM Industry Funding by Month</h3>
-    <%= render 'industry_bar', :i_id  => @industry.id %>
+    <%= render 'industry_bar', :i_id  => 97 %>
     <p class="footnote"><em>*Dollars in millions</em></p>
   </div>
   <p>&nbsp;</p>
 
 </section>
 
-
-
-
-
-<div>
-</div>
-
 <script>
   $(document).ready(function(){
      $('#industry_id').change(function(){
        var str = $('#industry_id :checked').text();
-      // dont know why!
+       // dont know why!
        var selected_industry = str.substring(0, str.length - 5);
        // end dont know why
        var filtered_industry_header = $("#industry-header-" + selected_industry).html();
@@ -184,14 +186,3 @@
      });
    });
 </script>
-//<script>
-//   $(document).ready(function(){
-//     var students = $('#message_student_id').html();
-//     $('#message_course_id').change(function(){
-//       var selected_course = $('#message_course_id :checked').text();
-//       var filtered_students = $(students).filter('optgroup[label="' + selected_course +'"]').html();
-//       console.log(filtered_students);
-//       $('#message_student_id').html(filtered_students);
-//     });
-//   });
-//</script>
