--- a/app/views/layouts/charts_layout.html.erb
+++ b/app/views/layouts/charts_layout.html.erb
@@ -17,7 +17,7 @@
         <header>
           <div class="container group">
             <a href="<%= home_url %>">
-              <h1 class="grid_8">crunch<span class="bling">stats</span> <span class="footnote">beta</span></h1>
+              <h1 class="grid_8">crunch<span class="bling">stats</span> <span class="footnote tag">alpha</span></h1>
             </a>
             <nav class="home_nav">
               <ul>
@@ -49,9 +49,8 @@
           <h5>Site Map</h5>
           <ul>
 
-            <li><%= link_to "Investments", "/investments" %></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="investments.html">Investments</a></li>
+
             <li><a href="#">Investors</a></li>
             <li><a href="#">Companies</a></li>
             <li><a href="#">Industries</a></li>
