--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,8 +4,12 @@
 <section id="banner_1">
   <div class="container">
     <div class="push_10 prefix_1 grid_12 suffix_1 banner_text">
-      <h2>Providing the data you want without the clutter you don't.</h2>
-      <p>A simple search engine for start-ups, investors and those who just want to know.</p>
+      <h2>Startup Funding Statistics</h2>
+      <p>CrunchStats is a statistical dashboard providing realtime
+      information compliled from Crunchbase on startup funding, angel investing, venture capital and everything in-between</p>
+
+      <br>
+      <button>Get Started</button>
       <p>&nbsp;</p>
     </div>
   </div>
@@ -16,15 +20,16 @@
     <nav class="section_nav">
       <a href=<%=individuals_url%>>
         <img src="assets/wing.svg">
-        <h4>ANGEL INVESTORS</h4>
+        <h4>ANGEL INVESTING</h4>
       </a>
       <a href=<%=companies_url%>>
         <img src="assets/rocket.svg">
-        <h4>STARTUPS</h4>
+        <h4>STARTUP FUNDING</h4>
       </a>
       <a href=<%=financials_url%>>
         <img src="assets/us_map.svg">
-        <h4>GEOGRAPHIES</h4>
+        <br>
+        <h4>GEOGRAPHIC BREAKDOWN</h4>
       </a>
     </nav>
   </section>
