--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -142,6 +142,14 @@ header h1{
 p .footnote{
   margin-right: 80px;
 }
+.tag {
+  padding:3px;
+  border: 1px solid #666;
+  border-radius: 5px;
+  color: #666;
+}
+
+
 /*----links----*/
 a{
   color: rgb(55,125,60);
