--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <header>
           <div class="container group">
             <a href="<%= home_url %>">
-              <h1 class="grid_8">crunch<span class="bling">stats</span> <span class="footnote">beta</span></h1>
+              <h1 class="grid_8">crunch<span class="bling">stats</span><span class="footnote tag">alpha</span></h1>
             </a>
             <nav class="home_nav">
               <ul>
@@ -49,7 +49,6 @@
            <li><%= link_to "Financials", financials_url %></li>
            <li><%= link_to "Individuals", "/individuals" %></li>
            <li><%= link_to "Fundings", fundings_url %></li>
-           <li><%= link_to "Investments", "/investments" %></li>
            <li><%= link_to "Locations", "/locations" %></li>
           </ul>
         </div>
